--- a/src/screens/ugly-cash/Ugly.scss
+++ b/src/screens/ugly-cash/Ugly.scss
@@ -17,12 +17,13 @@ ul {
     }
 }
 
-.new-app-container{
+.new-app-container {
     display: flex;
     flex-direction: column;
-    padding: 120px 64px;
+    padding: 72px 64px;
     align-items: center;
     gap: 72px;
+    background-color: #f1f1f1;
 
     .rebrand-arrow {
         display: flex;
@@ -44,13 +45,13 @@ ul {
             gap: 16px;
             align-items: center;
         }
-        
+
 
         .new-app-item {
             display: flex;
             flex-direction: column;
             gap: 24px;
-            
+
 
             img.app-icon {
                 width: 64px;
@@ -178,6 +179,7 @@ ul {
     padding: 64px;
     flex: 1;
     justify-content: space-between;
+    gap: 30%;
 
     .modular-home-title {
         display: flex;
@@ -185,10 +187,58 @@ ul {
         gap: 24px;
     }
 
-    video{
+    video {
         height: 90vh;
         border-radius: 12px;
     }
+}
+
+.branding-container {
+    display: flex;
+    flex-direction: column;
+    padding: 64px;
+    gap: 64px;
+    flex: 1;
+
+    .branding-title {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        color: var(--color-secondary);
+    }
+
+    .illustration-imgs {
+        display: flex;
+        gap: 24px;
+        flex: 1;
+        align-items: center;
+
+        img {
+            height:fit-content;
+            width: 180px;
+        }
+    }
+
+    svg {
+        width: 100%;
+        display: flex;
+        flex: 1;
+    }
+
+    .animation-container{
+        display: flex;
+        justify-content: space-between;
+
+        .video-container-uc {
+            display: flex;
+            gap: 24px;
+
+            video {
+                height: 80vh;
+            }
+        }
+    }
+
 }
 
 .video-general-ugly {
