Add a video player component and ajust in mobile

--- a/src/screens/ugly-cash/Ugly.scss
+++ b/src/screens/ugly-cash/Ugly.scss
@@ -410,7 +410,7 @@ ul {
         gap: 32px;
 
         video {
-            height: fit-content;
+            height: auto;
             width: 85%;
         }
     }
