Ajust of ScrollToTopOnNavigation and mobile

--- a/src/components/project-component/ProjectComponent.scss
+++ b/src/components/project-component/ProjectComponent.scss
@@ -87,7 +87,7 @@
         overflow: hidden;
         align-items: flex-start;
         padding-right: 24px;
-        
+
 
         img {
           height: auto;
@@ -116,6 +116,12 @@
             width: 260px;
           }
         }
+
+        .see-more:hover {
+          svg {
+            transform: unset;
+          }
+        }
       }
 
     }
@@ -138,16 +144,19 @@
         }
       }
 
-      .project-info{
+      .project-info {
 
 
-        .see-more{
-          gap:4px;
+        .see-more {
+          gap: 4px;
         }
-        img{
+
+        img {
           max-width: 80px;
           max-height: 80px;
         }
+
+
       }
 
 
