--- a/src/screens/resume/Resume.scss
+++ b/src/screens/resume/Resume.scss
@@ -107,7 +107,7 @@
 
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 
     .container-column {
 
@@ -176,7 +176,7 @@
     }
 }
 
-@media screen and (max-width: 1124px) {
+@media screen and (max-width: 1124px)  and (min-width: 701px){
 
     .container-column {
 
