--- a/src/screens/resume/Resume.scss
+++ b/src/screens/resume/Resume.scss
@@ -63,7 +63,7 @@
                     display: unset;
                     margin: 0;
                     color: #A8A8A8;
-                    font-family: Helvetica Neue;
+                    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
                     font-size: 16px;
                     font-style: normal;
                     font-weight: 400;
