--- a/src/screens/ugly-cash/Ugly.scss
+++ b/src/screens/ugly-cash/Ugly.scss
@@ -1,6 +1,6 @@
 p {
     margin: unset;
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 16px;
 }
 
@@ -67,7 +67,7 @@ ul {
 
             p {
                 font-size: 16px;
-                font-family: helvetica, sans-serif;
+                font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
             }
         }
     }
@@ -151,7 +151,7 @@ ul {
                     border-radius: 24px;
                     color: var(--color-primary);
                     width: fit-content;
-                    font-family: helvetica, sans-serif;
+                    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
                     font-size: 16px;
                 }
             }
