--- a/src/components/scroll-up/ScrollUp.scss
+++ b/src/components/scroll-up/ScrollUp.scss
@@ -6,7 +6,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 .scroll-arrow {
