--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ body {
   h4 {
     margin: 0;
     display: unset;
-    font-family: Helvetica Neue;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 
   }
 }
