--- a/src/screens/banco-pan/BancoPan.scss
+++ b/src/screens/banco-pan/BancoPan.scss
@@ -61,6 +61,7 @@
 
     img {
         width: 80%;
+        object-fit: contain;
     }
 }
 
@@ -113,6 +114,7 @@
 
     img {
         width: 70%;
+        object-fit: contain;
     }
 }
 
