--- a/src/components/project-component/ProjectComponent.scss
+++ b/src/components/project-component/ProjectComponent.scss
@@ -7,19 +7,23 @@
 
   .project-cover {
     display: flex;
-    gap: 40px;
+    flex: 1;
+    justify-content: space-between;
+    gap: 20px;
     max-width: 1440px;
     flex: 1;
 
     .project-img-container {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      flex: 1;
       padding-right: 64px;
+      width: 50%;
 
       img {
-        height: 75%;
+        width: 90%;
+        max-height: 90%;
+        object-fit: contain;
       }
     }
 
