--- a/src/screens/ugly-cash/Ugly.scss
+++ b/src/screens/ugly-cash/Ugly.scss
@@ -24,6 +24,7 @@ ul {
     align-items: center;
     gap: 72px;
     background-color: #f1f1f1;
+    
 
     .rebrand-arrow {
         display: flex;
@@ -38,14 +39,12 @@ ul {
     .new-app-imgs {
         display: flex;
 
-
         .new-app-title {
             display: flex;
             flex-direction: column;
             gap: 16px;
             align-items: center;
         }
-
 
         .new-app-item {
             display: flex;
@@ -63,6 +62,8 @@ ul {
                 padding-left: 32px;
                 height: 70vh;
                 width: fit-content;
+                object-fit: contain;
+                
             }
 
             p {
@@ -221,6 +222,7 @@ ul {
         img {
             height: fit-content;
             width: 180px;
+            object-fit: contain;
         }
     }
 
