--- a/src/components/scroll-up/ScrollUp.scss
+++ b/src/components/scroll-up/ScrollUp.scss
@@ -6,6 +6,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    color: var(--color-secondary);
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
