Ajustment home in the mobile

--- a/src/components/project-component/ProjectComponent.scss
+++ b/src/components/project-component/ProjectComponent.scss
@@ -91,13 +91,13 @@
         overflow: hidden;
         align-items: flex-start;
         padding-right: 24px;
+        width: 100%;
 
 
         img {
-          height: auto;
+          height: 50vh;
           width: 100%;
         }
-
       }
 
       .project-info {
