--- a/src/screens/presentation-screen/PresentationScreen.scss
+++ b/src/screens/presentation-screen/PresentationScreen.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Fontspring-DEMO-integralcf-regular';
+  src: url(../../assets/font/Fontspring-DEMO-integralcf-regular.otf) format('opentype');
+}
+
 a {
   text-decoration: none;
   color: unset;
@@ -30,7 +35,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
 
   img {
     height: 70vh;
@@ -101,14 +106,6 @@ a {
   }
 }
 
-
-
-@font-face {
-  font-family: 'Fontspring-DEMO-integralcf-regular';
-  src: url(../../assets/font/Fontspring-DEMO-integralcf-regular.otf) format('opentype');
-}
-
-
 .presentation-screen-container {
   display: flex;
   justify-content: center;
@@ -120,7 +117,7 @@ a {
 
     img {
       position: absolute;
-      left: 85vw;
+      left: 80vw;
       top: 75vh;
       width: 320px;
       height: 320px;
