--- a/src/components/project-nav/ProjectNav.scss
+++ b/src/components/project-nav/ProjectNav.scss
@@ -52,6 +52,10 @@ nav {
                 }
             }
 
+            &.dont-show {
+                display: none;
+            }
+
 
         }
     }
