--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@ body {
 
   --cursor-main: url('./assets/svg/cursor.svg'), auto;
   --cursor-hover: url('./assets/svg/cursor-hover.svg'), auto;
+  --cursor-loading: url('./assets/mp4/cursor.gif') 0 0, auto;
   --color-primary: black;
   --color-secondary: white;
   margin: 0;
